lib/tests/fixtures/compiler/evaluation/func_deep_stack_by_one.baseline
Error: func_deep_stack_by_one.pp:3:9: node 'test': evaluation failed: done
  fail done
  ^~~~
  backtrace:
    in 'fail' (no source)
    in 'foo' at func_deep_stack_by_one.pp:3
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    in 'foo' at func_deep_stack_by_one.pp:5
    and 1 more frame
